# single-ecom

./: .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_AUTH_GUIDE.md  KARIGOR.md  KNOWLEDGE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  ERROR_HANDLING.md  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/account/: admin.py  audit.py  logging_utils.py  managers.py  models.py  rate_limiter.py  serializers.py  swagger_examples.py  swagger_schemas.py  urls.py  utils.py  views.py
backend/account/migrations/: 0001_initial.py  0002_user_email_verified.py  0003_auditlog.py
backend/account/tests/: conftest.py  test_api.py  test_integration.py  test_models.py  test_rate_limiter.py  test_serializers.py  test_utils.py
backend/alembic/: env.py
backend/alembic/versions/: 0d95432d16c7_add_delivery_zones.py  6afafbb5e3c7_.py  (+20 more)
backend/app/: main.py
backend/config/: api_response.py  constants.py  drf_exception_handler.py  example_views.py  exceptions.py  middleware.py  response_serializers.py  settings.py  tasks.py  urls.py  views.py
backend/docs/: error_codes.md
backend/seeders/: __init__.py  _template.py  base.py  metals_seeder.py  permissions_seeder.py  roles_seeder.py  runner.py  slides_seeder.py  super_admin_seeder.py
(+412 files in other folders)
